--- a/app/globals.css
+++ b/app/globals.css
@@ -10,6 +10,10 @@
  * Copyright 2011-2022 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 :root {
   --bs-blue: #0d6efd;
   --bs-indigo: #6610f2;
